--- a/css/primero.css
+++ b/css/primero.css
@@ -1,5 +1,5 @@
 /* *********************************** */
-/* *** Estilos SOLO para index.html *** */
+/* *** Estilos SOLO para primero.html *** */
 /* *********************************** */
 
 #container{
